--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-HELP.md
+kafka-basico/HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+!../.idea/.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
